내가 할 수있는 최대한계치 AI모델